syntax = "proto3";
package Ordering.Inventory.Api;

message Buyer{
  string Email = 1;
  string BuyerId = 2;
  string PhoneNumber = 3;
  string UserName = 4;
  BillingAddress BillingAddress = 5;
}
message BuyerByIdRequest{
  string BuyerId = 1;
}
message ProductByIdRequest{
  string ProductId = 1;
}
message BillingAddress{
  string FirstName = 1;
  string LastName = 2;
  string StreetAddress = 3;
  string City = 4;
  string State = 5;
  string Zip_code = 6;
  string Country = 7;
}
message Product{
  string Title = 1;
  int32 Count = 2;
  string Price = 3;
  string SellerId = 4;
}
service CatalogService{
  rpc BuyerById(BuyerByIdRequest) returns(Buyer);
  rpc ProductById(ProductByIdRequest) returns(Product);
}